--- a/p4.html
+++ b/p4.html
@@ -8,20 +8,29 @@
         <title>Document</title>
     </head>
         <body class="body">
-            <div class = "fon">
-               <img scr = "/* unsplash:OOE4xAnBhKo */
-
-position: absolute;
-width: 1349px;
-height: 2022.6px;
-left: 0px;
-top: 1253px;
-
-background: url(.jpg);
-mix-blend-mode: soft-light;
-border-radius: 43.735px;
-transform: rotate(-90deg);
-" class = "flower"
-            </div>
+           
+            <div class = "TextBody">
+                <p class= "LeftText">Make Positive Energy<br>
+                    Around you,<br>
+                    Make yourself Fresh.</p>
+                    <button class = "ShopProducts">Shop Products</button>
+                    <button class = "Explore">Explore</button>
+              </div>
+              <div class="TopButton">
+                <div class = "TopText">
+                  <img src = "C:\Users\Дарико\Pictures\Screenshots\1670822461_grizly-club-p-ikonka-korzina-png-24.png" class = "basket">
+                  <img src = "C:\Users\Дарико\Pictures\Screenshots\png-transparent-heart-symbol-computer-icons-irregular-borders-love-heart-sign.png" class = "liked">
+                  <button class = "Home">Home<span></button>
+                  <button class = "IndoorPlants">Indoor Plants</button>
+                  <button class = "OurdoorPlants">Ourdoor Plants</button>
+                  <img src = "C:\Users\Дарико\Pictures\Screenshots\Vector-Search.png" class = "Search">
+                </div>
+                <div class = "Emblem">
+                    <p class= "Plantify">Plantify<br></p>
+                    <img src = "C:\Users\Дарико\Pictures\Screenshots\png-transparent-computer-icons-sustainability-symbol-black-beans-miscellaneous-leaf-hand.png" class = "FlowerEmblem">
+                </div>
+        
         </body>
+        <img scr = "C:\Users\Дарико\Pictures\Screenshots\1672638840_pro-dachnikov-com-p-tsvetochnie-gorshki-v-interere-foto-17.jpg" class = "flower" >
+
 </html>
